G1 HeapRegions can no longer be ContiguousSpaces

XMLWordPrintable

    • gc
    • b24

        When G1 is modified to unload classes without doing full collections the old HeapRegions
        can contain unparseable objects.
        This makes ContiguousSpace unsuitable as a base class for HeapRegion since it assumes that all objects below _top are parseable.

        Modify G1OffsetTableContigSpace to implement allocation with a separate _top and reimplement some Space pure virtuals to make object iteration work as expected.

              Assignee:
              Mikael Gerdin (Inactive)
              Reporter:
              Mikael Gerdin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: