8047818: G1 HeapRegions can no longer be ContiguousSpaces

Change parent of G1OffsetTableContigSpace to CompactibleSpace, reimplement missing functionality

Reviewed-by: stefank, jmasa, tschatzl